<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/grid_padding_left"
    android:paddingEnd="@dimen/grid_padding_right"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent">

    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_margin_left"
        android:fontFamily="@font/icomoon"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_default_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/transfer_item_icon_placeholder"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_margin_left"
        android:layout_marginTop="@dimen/grid_margin_top"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Subtitle1"
        app:layout_constraintLeft_toRightOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/transfer_item_title_placeholder"/>

    <TextView
        android:id="@+id/description_1"
        android:layout_width="@dimen/description_max_layout_width"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"
        app:layout_constraintLeft_toLeftOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/transfer_item_country_placeholder"/>

    <TextView
        android:id="@+id/description_2"
        android:layout_width="@dimen/description_max_layout_width"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Hyperwallet.Body2"
        app:layout_constraintLeft_toLeftOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/description_1"
        tools:text="@string/transfer_item_identification_placeholder"/>

    <ImageView
        android:id="@+id/item_selected_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/destination_item_description"
        android:paddingStart="@dimen/item_vertical_padding"
        android:paddingEnd="@dimen/grid_margin_right"
        android:src="@drawable/ic_check_14dp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="?android:attr/listDivider"
        android:layout_marginStart="@dimen/divider_offset"
        android:layout_marginTop="@dimen/divider_padding_top"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/description_2"/>
</androidx.constraintlayout.widget.ConstraintLayout>